src/components/media/Aside/Item/Item.module.scss
@use '../../../../css/config.scss' as *;

.container {
  @include mq(above, md) {
    font-size: var(--text-size-300);
  }

  & > *:last-child {
    @include mq(below, md) {
      white-space: nowrap;
    }
  }

  .label {
    font-weight: 350;

    @include mq(above, md) {
      font-weight: 550;
    }
  }
}

